--- a/transparent-favicon.html
+++ b/transparent-favicon.html
@@ -1,9 +1,8 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<body>
-test
-</body>
+<html class="no-js" lang="en">
+  <head>
+      <meta charset="utf-8">
+      <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicon-transparent.ico" type="image/x-icon" />
+  </head>
+<body></body>
 </html>
