--- a/transparent-favicon.html
+++ b/transparent-favicon.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
       <meta charset="utf-8">
-      <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicon-transparent.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="/images/favicon-transparent.ico" type="image/x-icon" />
   </head>
 <body></body>
 </html>
